# pytao

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Copyright  MANIFEST.in  README.md  dev-environment.yml  development.html  docs-requirements.txt  environment.yml  generate_interface_commands.py  genindex.html  index.html  installation.html  interface.tpl.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  usage.html
.doctrees/: environment.pickle  index.doctree
.doctrees/dev_docs/: development.doctree  documentation.doctree
.doctrees/examples/: advanced.doctree  basic.doctree  bunch.doctree  data.doctree  fodo.doctree  lattice.doctree
.github/: FUNDING.yml
.github/workflows/: ci.yml  (+3 more)
_static/: documentation_options.js
api/: plot-bokeh.html  plot-mpl.html  plot.html  subprocesstao.html  tao.html
constraints/: index.html
dev_docs/: development.html  documentation.html
development/: index.html
docs/: development.md  index.md  installation.md  optimize.md  release_notes.md  usage.md
examples/: B1.h5  B2.h5  B3.h5  B4.h5  BEGINNING.h5  END.h5  MAR.BEG.h5  MAR.END.h5  P1.h5  P2_1.h5  P2_2.h5  P2_3.h5  P3_1.h5  P3_2.h5  P3_3.h5  P4_1.h5  P4_2.h5  P4_3.h5  P5.h5  Q1.h5  Q2.h5  Q3.h5  Q4.h5  Q5.h5  Q6.h5  advanced.html  advanced.ipynb  basic.html  basic.ipynb  beam_track_progress_bar.html  beam_track_progress_bar.ipynb  beta.html  bunch.html  bunch.ipynb  data.html  data.ipynb  fodo.html  fodo.ipynb  lattice.html  lattice.ipynb  (+9 more)
installation/: index.html
old_examples/: plot.ipynb  pytao_example.py
pytao/: __init__.py  __main__.py  _shmem_compat.py  _version.py  cli.py  core.py  errors.py  interface.tpl.py  interface_commands.py  pbar.py  startup.py  subproc.py  subproc_main.py  tao.py  tao_interface.py
release_notes/: index.html
scripts/: bump_minimum_version.sh  dump_structs_json.sh  execute_notebooks.bash  generate_interface_commands.py  tao_datetime_version.py
search/: search_index.json
usage/: index.html  usage.md
user_docs/: ctypes.html  index.html  interfaces.html  pexpect.html  tao.html
(+441 files in other folders)
